<resources>
    <string name="app_name">Gastos com Viagem</string>
    <string name="distance">Distância</string>
    <string name="price">Preço</string>
    <string name="autonomy">Autonomia</string>
    <string name="total_de_quilometros">Total de quilômetros</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="kms_por_litro">KMs por litro</string>
    <string name="seu_gasto_total">Seu gasto total será de:</string>
    <string name="total_value">R$ 0.00</string>
    <string name="calculate">CALCULAR</string>
    <string name="validation_fillAllFields">Preencha todos os campos</string>
</resources>